tests/fsharp/typecheck/sigs/neg_byref_2.bsl

neg_byref_2.fs(2,5,2,8): typecheck error FS0431: A byref typed value would be stored here. Top-level let-bound byref values are not permitted.

neg_byref_2.fs(2,5,2,8): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_2.fs(2,11,2,15): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
