tests/fsharp/typecheck/sigs/neg_byref_2.fs
module Test
let x02 = [||] : byref<int>[]      (* trap: tinst *)
